--- a/index.html
+++ b/index.html
@@ -3,33 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ventu se la come<title>
+    <title>Ventu y Ardy se aman</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Ventu se la come</h1>
+        <h1>Entre Primos</h1>
     </header>
     <main>
         <section class="introduction">
-            <h2>El amor de Ventu por la comersela </h2>
-            <p>Ventu tiene una pasión inigualable por comersela¡Ventu se la come toda!</p>
+            <h2>El amor de Ventu y Ardy por por comersela</h2>
+            <p>Ventu y Ardy tienen una pasión inigualable por comersela ¡Ventu y Ardy se la comen toda!</p>
         </section>
         <section class="fun-facts">
-            <h2>Datos Divertidos</h2>
+            <h2>Datos </h2>
             <ul>
-                <li>Ventu puede comerse todo el dia </li>
-                <li>Una vez, Ventu ganó un concurso de comersela toda.</li>
-                <li>El platillo favorito de Ventu es la ñonga</li>
+                <li>Ventu y Ardy pueden comersela todo el dia</li>
+                <li>Una vez, Ventu y Ardy ganaron un concurso de comersela.</li>
+                <li>El platillo favorito de Ventu y Ardy es la ñonga</li>
             </ul>
         </section>
-        <section class="quote">
-            <h2>Ventu Dice:</h2>
-            <p>"¡Si es delicioso, me lo como!"</p>
+        <section class="interactive">
+            <h2 class="interactive-text">Ventu y Ardy se aman</h2>
+            <button id="eat-button">por cada click ventu y ardy se la van a comer !Ayudalos¡ </button>
+            <p id="counter-text">Ventu y Ardy se la han comido <span id="click-counter">0</span> veces</p>
         </section>
     </main>
     <footer>
-        <p>&copy;2024  Ventu se la come a diario. todos los derechos reservados </p>
+        <p>&copy; 2024 Ventu y Ardy se la comen. Todos los derechos reservados</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
